# local-forge

./: .gitignore  .localforgeignore  Cargo.toml  IMPLEMENTATION.md  LICENSE  README.md  REDDIT_POST.md
Formula/: localforge.rb
coreml/: advisory.py  build_model.py  infer.py  model_metadata.json  static_analysis.py  tfidf_vectorizer.pkl
coreml/LocalForgeModel.mlpackage/: Manifest.json
coreml/LocalForgeModel.mlpackage/Data/com.apple.CoreML/: model.mlmodel
docs/: layer3_optimization.md
hooks/: pre-commit
scripts/: build_release.sh  install_hook.sh  notarize.sh  package_dmg.sh  package_homebrew.sh
src/: advisory_engine.rs  ane_bridge.rs  ast_validator.rs  main.rs  mcp_server.rs
src/tui/: dashboard.rs  events.rs  mod.rs
tests/: benchmark.py  benchmark_v2.py  layer3_eval.py  layer3_eval_corpus.py  review_target.py
tests/benchmark_results/: layer3_eval_20260621_051502.json  layer3_eval_20260621_051502_report.md
tests/benchmark_results/layer 3 preliminary/: layer3_eval_20260621_041340.json  layer3_eval_20260621_041340_report.md
ui/: ExportOptions.plist
ui/LocalForge.xcodeproj/: project.pbxproj
ui/LocalForgeApp/: App.swift  ContentView.swift  Info.plist  LocalForge.entitlements  LogViewModel.swift  ReposView.swift  ReposViewModel.swift
ui/LocalForgeApp/Assets.xcassets/AppIcon.appiconset/: Contents.json
ui/LocalForgeApp/Assets.xcassets/LocalForgeLogo.imageset/: Contents.json
walkthrough/: 01_database.py  02_payments.py  03_auth.py  04_inventory.rs  05_api.js
