[package]
name        = "localforge"
version     = "2.0.0"
edition     = "2021"
description = "LocalForge v2.0 — MCP-compliant security gateway for Apple Silicon"

[[bin]]
name = "localforge"
path = "src/main.rs"

[dependencies]
ratatui    = "0.26"
crossterm  = "0.27"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
regex      = "1"
tokio      = { version = "1", features = ["full"] }
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
